# star-do-vale

./: .gitignore  README.md  check.sh  pyproject.toml
.github/workflows/: linting.yml
src/: colors.py  debug.py  editor.py  level.py  main.py  menu.py  objects.py  player.py  screen.py  settings.py  support.py  surfaces.py
src/app_states/: exit.py  game.py  main_menu.py
src/app_states/core/: app_state_manager.py  base_app_state.py
src/levels/: home.py  level.py
src/menus/: fishing.py
src/objects/: animation.py  collectable.py  collectables.py  obstacle_object.py  obstacles.py  pick_up_object.py  tile.py  tiles.py
tests/: test_ci.py
