[tool.poetry]
name = "Star do Vale"
version = "0.1.0"
description = ""
authors = ["Paula <paulakaferreira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pyproject-flake8 = "6.0.0a1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "W503,E203"
max-line-length = 120
exclude = ["__pycache__", "venv"]

[tool.black]
line-length = 120
