[tool.poetry]
name = "Star do Vale"
version = "0.1.0"
description = ""
authors = ["Paula <paulakaferreira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.9.0"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["misc"]
strict=true
exclude = ["__pycache__"]

[tool.ruff]
ignore = ["F503", "E203"]
extend-select = [
  "E", # pycodestyle
  "W", # pycodestyle
  "I", # isort
  "C", # complex-structure
]
line-length = 120
exclude = ["__pycache__", "venv", "migrations"]