[tool.poetry]
name = "Star do Vale"
version = "0.1.0"
description = ""
authors = ["Paula <paulakaferreira@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pygame-gui = "0.6.9"
pygame-ce = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.9.0"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["misc"]
strict=true
exclude = ["__pycache__", "venv"]

[tool.ruff]
lint.ignore = ["F503", "E203"]
lint.extend-select = [
  "E", # pycodestyle
  "W", # pycodestyle
  "I", # isort
  "C", # complex-structure
  "F", # format
]
line-length = 120
exclude = ["__pycache__", "venv"]